# low-tide

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt  run.err
-/.config/low-tide/: session.json
.github/workflows/: ci.yml
docs/prs/: eq-theme-swatches-readme.md  fix-library-navigation-and-mix-playback.md
lowtide/: app.py  local_library.py  local_track.py  lyrics.py  main.py  mpris.py  play_count_store.py  player.py  recommender.py  scrobble_store.py  scrobbler.py  tidal_client.py
lowtide/screens/: album.py  artist.py  constellation.py  favorites.py  genre.py  journey.py  library.py  local.py  new_for_you.py  playlist.py  radio.py  search.py
lowtide/widgets/: album_art.py  eq_visualizer.py  now_playing.py  track_list.py
scripts/: import-podcast.py
