[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "low-tide"
version = "0.1.0"
description = "A terminal UI client for TIDAL"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "tidalapi>=0.8.11",
    "textual>=8.2.3",
    "textual-image>=0.8.5",
    "Pillow>=11.0.0",
    "dbus-next>=0.2.3",
    "pylast>=5.0.0",
    "mutagen>=1.47.0",
]

[project.scripts]
low-tide = "lowtide.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["lowtide*"]
